Refactor launcher PIDs, enhance intelligence logging, and update project memory structure for improved system analysis and user interaction

--- a/data/memory/projects/Aurora-Main/project_memory.json
+++ b/data/memory/projects/Aurora-Main/project_memory.json
@@ -19,6 +19,16 @@
       "role": "user",
       "content": "i need you to analyze my computer and tell me what is wrong with it?",
       "timestamp": "2025-12-28T16:52:50.628665"
+    },
+    {
+      "role": "user",
+      "content": "analyze the system",
+      "timestamp": "2025-12-28T17:01:16.677382"
+    },
+    {
+      "role": "user",
+      "content": "i need you to check for my system for enhsncement",
+      "timestamp": "2025-12-28T17:01:34.112456"
     }
   ],
   "mid_term": [
@@ -723,6 +733,32 @@
         "type": "shortterm"
       },
       "stored_at": "2025-12-28T16:52:50.641966"
+    },
+    "memory_29b7cc90-cdad-4c7c-801a-c5147034d7b1": {
+      "value": {
+        "text": "analyze the system",
+        "meta": {
+          "session_id": "chat-1766959265477",
+          "client": "web",
+          "type": "user_message"
+        },
+        "timestamp": "2025-12-28T17:01:16.706827",
+        "type": "shortterm"
+      },
+      "stored_at": "2025-12-28T17:01:16.706843"
+    },
+    "memory_fd573715-89b2-49d2-8157-a9b825ffc98b": {
+      "value": {
+        "text": "i need you to check for my system for enhsncement",
+        "meta": {
+          "session_id": "chat-1766959265477",
+          "client": "web",
+          "type": "user_message"
+        },
+        "timestamp": "2025-12-28T17:01:34.128691",
+        "type": "shortterm"
+      },
+      "stored_at": "2025-12-28T17:01:34.128719"
     }
   },
   "events": [
@@ -1185,8 +1221,28 @@
         "longterm": false
       },
       "timestamp": "2025-12-28T16:52:50.654718"
+    },
+    {
+      "type": "memory_write",
+      "details": {
+        "id": "29b7cc90-cdad-4c7c-801a-c5147034d7b1",
+        "text_length": 18,
+        "has_meta": true,
+        "longterm": false
+      },
+      "timestamp": "2025-12-28T17:01:16.717610"
+    },
+    {
+      "type": "memory_write",
+      "details": {
+        "id": "fd573715-89b2-49d2-8157-a9b825ffc98b",
+        "text_length": 49,
+        "has_meta": true,
+        "longterm": false
+      },
+      "timestamp": "2025-12-28T17:01:34.142651"
     }
   ],
   "semantic_index": {},
-  "last_updated": "2025-12-28T16:52:50.655401"
+  "last_updated": "2025-12-28T17:01:34.143519"
 }
